# cbcompiler_rs

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md
crates/cb-backend-interp/: Cargo.toml
crates/cb-backend-interp/src/: error.rs  ffi.rs  heap.rs  interp.rs  lib.rs  observer.rs  string_handle.rs  value.rs
crates/cb-backend-interp/tests/: integration.rs
crates/cb-backend-llvm/: Cargo.toml  build.rs
crates/cb-backend-llvm/src/: emit.rs  lib.rs  link.rs
crates/cb-backend-llvm/src/codegen/: func.rs  mod.rs  regtypes.rs  runtime.rs  types.rs
crates/cb-driver/: Cargo.toml
crates/cb-driver/src/: include.rs  lib.rs  main.rs
crates/cb-driver/tests/: cli.rs  diff_llvm.rs  programs.rs
crates/cb-driver/tests/fixtures/programs/: array_1d.cb  array_empty.cb  array_foreach.cb  array_len.cb  array_multidim.cb  array_negative_index.cb  array_oob.cb  array_param.cb  array_redim.cb  array_redim_global.cb  (+129 more)
crates/cb-frontend/: Cargo.toml
crates/cb-frontend/src/: ast.rs  ast_print.rs  keywords.rs  lexer.rs  lib.rs  parser.rs  span.rs  string_value.rs  token.rs
crates/cb-frontend/tests/: deep_nesting.rs  lexer_props.rs  lexer_snapshots.rs  lexer_units.rs  parser_props.proptest-regressions  parser_props.rs  parser_snapshots.rs
crates/cb-frontend/tests/fixtures/: case_comma_list.cb  comments.cb  continuation_multi_line.cb  control_flow.cb  delete_statement.cb  errors.cb  hello.cb  implicit_decl_as.cb  next_with_sigil.cb  numerics.cb  parser_break_continue.cb  parser_dim.cb  parser_func.cb  parser_if.cb  parser_includes.cb  parser_labels_goto.cb  parser_loops.cb  parser_recovery.cb  parser_select.cb  parser_strings.cb  parser_type_expr.cb  parser_type_struct.cb  redim_array_element_type.cb  select_duplicate_default.cb  single_line_if_empty.cb  strings.cb  types.cb
crates/cb-frontend/tests/snapshots/: lexer_snapshots__comments.snap  lexer_snapshots__control_flow.snap  lexer_snapshots__errors.snap  lexer_snapshots__hello.snap  lexer_snapshots__numerics.snap  lexer_snapshots__strings.snap  lexer_snapshots__types.snap  parser_snapshots__case_comma_list.snap  parser_snapshots__continuation_multi_line.snap  parser_snapshots__continuation_multi_line_preserve_trivia.snap  parser_snapshots__delete_statement.snap  parser_snapshots__implicit_decl_as.snap  parser_snapshots__next_with_sigil.snap  parser_snapshots__parser_break_continue.snap  parser_snapshots__parser_dim.snap  parser_snapshots__parser_func.snap  parser_snapshots__parser_if.snap  parser_snapshots__parser_includes.snap  parser_snapshots__parser_labels_goto.snap  parser_snapshots__parser_loops.snap  parser_snapshots__parser_recovery.snap  parser_snapshots__parser_select.snap  parser_snapshots__parser_strings.snap  parser_snapshots__parser_type_expr.snap  parser_snapshots__parser_type_struct.snap  parser_snapshots__redim_array_element_type.snap  parser_snapshots__select_duplicate_default.snap  parser_snapshots__single_line_if_empty.snap
crates/cb-runtime-sys/: Cargo.toml  build.rs
crates/cb-runtime-sys/c/: catalog.c  cb_runtime.h
crates/cb-runtime-sys/src/: lib.rs
crates/cb-sema/: Cargo.toml
crates/cb-sema/src/: check.rs  convert.rs  diagnostics.rs  lib.rs  lower.rs  scope.rs  types.rs
crates/cb-sema/tests/: lower_snapshots.rs
crates/cb-sema/tests/snapshots/: lower_snapshots__array_multidim_and_len_dim.snap  lower_snapshots__array_new_index_store_load.snap  lower_snapshots__array_of_structs_element_field.snap  lower_snapshots__break_count_exits_nested_loops.snap  lower_snapshots__comparison_with_promotion.snap  lower_snapshots__delete_field_and_index_are_rvalue.snap  lower_snapshots__for_each_array.snap  lower_snapshots__for_each_multidim_array.snap  lower_snapshots__for_each_struct_array.snap  lower_snapshots__for_each_type.snap  lower_snapshots__for_loop.snap  lower_snapshots__for_loop_break_continue.snap  lower_snapshots__for_loop_descending.snap  lower_snapshots__for_loop_float_step.snap  lower_snapshots__for_loop_mixed_narrowing.snap  lower_snapshots__function_address_lowers_to_func_addr.snap  lower_snapshots__function_call.snap  lower_snapshots__function_local_const.snap  lower_snapshots__goto_label.snap  lower_snapshots__if_else.snap  lower_snapshots__implicit_conversion_in_assignment.snap  lower_snapshots__mixed_type_arithmetic.snap  lower_snapshots__nested_for_loops.snap  lower_snapshots__redim_local_and_global.snap  lower_snapshots__repeat_forever_break_continue.snap  lower_snapshots__repeat_until_break_continue.snap  lower_snapshots__repeat_while_break_continue.snap  lower_snapshots__runtime_function_call.snap  lower_snapshots__select_case.snap  lower_snapshots__select_continue_fallthrough.snap  lower_snapshots__select_default_in_middle.snap  lower_snapshots__short_circuit_and.snap  lower_snapshots__short_circuit_or.snap  lower_snapshots__simple_assignment.snap  lower_snapshots__string_compare_and_strlen.snap  lower_snapshots__string_concat_mixed.snap  lower_snapshots__struct_copy_assignment.snap  lower_snapshots__struct_field_write_read.snap  lower_snapshots__struct_nested_field_write.snap  lower_snapshots__type_delete_lvalue_rvalue_global.snap  (+5 more)
runtime/: CMakeLists.txt  CMakePresets.json  catalog.c  catalog.cpp  cb_array.cpp  cb_array.h  cb_camera.cpp  cb_camera.h  cb_camera_math.h  cb_collision_data.h  cb_convert.cpp  cb_convert.h  cb_file.cpp  cb_font.cpp  cb_font.h  cb_geom.h  cb_gfx.cpp  cb_gfx.h  cb_host.cpp  cb_input.cpp  cb_input.h  cb_keys.def  cb_map.cpp  cb_map.h  cb_map_data.h  cb_math.cpp  cb_memblock.cpp  cb_object.cpp  cb_object.h  cb_object_data.h  cb_particle.h  cb_runtime.h  cb_runtime_core.h  cb_runtime_func.h  cb_sound.cpp  cb_sound.h  cb_standalone.cpp  cb_strfuncs.cpp  cb_string.cpp  cb_system.cpp  (+6 more)
runtime/tests/: test_array.cpp  test_camera.cpp  test_collision.cpp  test_convert.cpp  test_file.cpp  test_geom.cpp  test_input.cpp  test_map.cpp  test_masking.cpp  test_memblock.cpp  test_object.cpp  test_particle.cpp  test_sound.cpp  test_standalone.cpp  test_string.cpp  test_type.cpp  test_utf8.cpp
runtime/vcpkg-triplets/: x64-windows-static-md.cmake
(+165 files in other folders)
