[workspace]
resolver = "3"
members = [
    "crates/cb-frontend",
    "crates/cb-ir",
    "crates/cb-backend-interp",
    "crates/cb-backend-llvm",
    "crates/cb-driver",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[workspace.lints.rust]
unsafe_code = "deny"
