[workspace]
resolver = "3"
members = [
    "crates/cb-backend-api",
    "crates/cb-backend-interp",
    "crates/cb-backend-llvm",
    "crates/cb-diagnostics",
    "crates/cb-driver",
    "crates/cb-frontend",
    "crates/cb-ir",
    "crates/cb-runtime-sys",
    "crates/cb-sema",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
# External crates
assert_cmd = "2"
clap = { version = "4", features = ["derive"] }
codespan-reporting = "0.11"
# LLVM bindings for the (opt-in) llvm backend. `llvm18-1` pins LLVM 18 to match
# the vcpkg-vendored toolchain (port 18.1.6); only built when
# `cb-backend-llvm/codegen` is enabled.
inkwell = { version = "0.9", features = ["llvm18-1"], default-features = false }
insta = "1"
phf = { version = "0.11", features = ["macros"] }
predicates = "3"
proptest = "1"
tempfile = "3"
unicode-case-mapping = "1"
unicode-ident = "1"

# Internal crates (path entries so other crates can switch to `workspace = true`)
cb-backend-api = { path = "crates/cb-backend-api" }
cb-backend-interp = { path = "crates/cb-backend-interp" }
cb-backend-llvm = { path = "crates/cb-backend-llvm" }
cb-diagnostics = { path = "crates/cb-diagnostics" }
cb-frontend = { path = "crates/cb-frontend" }
cb-ir = { path = "crates/cb-ir" }
cb-runtime-sys = { path = "crates/cb-runtime-sys" }
cb-sema = { path = "crates/cb-sema" }
