[package]
name = "cb-backend-interp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cb-diagnostics = { path = "../cb-diagnostics" }
cb-ir = { path = "../cb-ir" }
cb-runtime-sys = { path = "../cb-runtime-sys" }
libffi = "5.1.0"

[dev-dependencies]
cb-frontend = { path = "../cb-frontend" }
cb-runtime-sys = { path = "../cb-runtime-sys" }
cb-sema = { path = "../cb-sema" }

[lints]
workspace = true
