[package]
name = "cb-backend-llvm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cb-ir = { path = "../cb-ir" }
# `inkwell` will be added once we wire up real codegen — kept out for now so
# the workspace builds without an LLVM toolchain installed.

[lints]
workspace = true
