[package]
name = "cb-backend-llvm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
# Pulls in `inkwell`/LLVM. Off by default so `cargo build --workspace` and CI
# stay LLVM-free; the driver's `llvm` feature turns this on (FD-047). Building
# this feature needs an LLVM 22 install located via `LLVM_SYS_221_PREFIX`.
codegen = ["dep:inkwell"]

[dependencies]
cb-backend-api = { path = "../cb-backend-api" }
cb-diagnostics = { path = "../cb-diagnostics" }
cb-ir = { path = "../cb-ir" }
inkwell = { workspace = true, optional = true }

[lints]
workspace = true
