[package]
name = "cb-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "cb"
path = "src/main.rs"

[features]
default = ["interp"]
interp = ["dep:cb-backend-interp"]
llvm = ["dep:cb-backend-llvm", "cb-backend-llvm/codegen"]

[dependencies]
cb-backend-api = { path = "../cb-backend-api" }
cb-diagnostics = { path = "../cb-diagnostics" }
cb-frontend = { path = "../cb-frontend" }
cb-ir = { path = "../cb-ir" }
cb-runtime-sys = { path = "../cb-runtime-sys" }
cb-sema = { path = "../cb-sema" }
cb-backend-interp = { path = "../cb-backend-interp", optional = true }
cb-backend-llvm = { path = "../cb-backend-llvm", optional = true }
clap.workspace = true
codespan-reporting.workspace = true

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
