[package]
name = "cb-sema"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cb-diagnostics = { path = "../cb-diagnostics" }
cb-frontend = { path = "../cb-frontend" }
cb-ir = { path = "../cb-ir" }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
